Monitors/LifeCycle: Created task (Exercise 2).

--- a/etc/lauv-xplore-1.ini
+++ b/etc/lauv-xplore-1.ini
@@ -108,6 +108,10 @@ Default Monitoring -- Hardware          = AHRS,
                                           Motor Controller,
                                           Servo Controller
 
+[Monitors.LifeCycle]
+Enabled                                 = Always
+Entity Label                            = LifeCycle
+
 [Monitors.FuelLevel]
 Capacity Decay Factor                   = 6.0
 Warning Level                           = 20
